add more static pages

--- a/static/contact.html
+++ b/static/contact.html
@@ -23,19 +23,16 @@
    <li><a href="./faq">FAQ</a></li>
 </ul>
 </div> <!-- end navbar -->
-	<p id="breadcrumbs">&nbsp; </p>
+	<p id="breadcrumbs">&nbsp; contact</p>
 </div> <!-- end header -->
 <!--/UdmComment-->
 <div id="content">
 
-<div id="searchform">
-<h1>Debian Code Search</h1>
-<p>Search all 130 GiB of source code within Debian:</p>
-<form action="/search" method="get">
-<input type="text" name="q">
-<input type="submit" value="Search">
-</form>
-</div>
+<h1>Debian Code Search: Contact</h1>
+
+<p>
+Currently, the best way to reach someone is by emailing stapelberg AT debian DOT org
+</p>
 
 </div>
 <div id="footer">
