--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
 <h1>Debian Code Search</h1>
 <p>Search all 130 GiB of source code within Debian:</p>
 <form action="/search" method="get">
-<input type="text" name="q">
+<input type="text" name="q" autofocus="autofocus">
 <input type="submit" value="Search">
 </form>
 </div>
