add contact/send feedback link to all pages

--- a/static/about.html
+++ b/static/about.html
@@ -62,7 +62,7 @@ href="./faq">FAQ</a>, feel free to <a href="./contact">contact us</a>.
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012 Debian Code Search - <a href="./contact">Contact</a></p>
+<p>© 2012 Debian Code Search - <a href="./contact">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
