--- a/static/faq.html
+++ b/static/faq.html
@@ -39,7 +39,7 @@ Since nobody asked any questions yet, this page is empty :-).
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012 Debian Code Search - <a href="./contact">Contact</a></p>
+<p>© 2012 Debian Code Search - <a href="./contact">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
