--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012 Debian Code Search - <a href="./contact">Contact</a></p>
+<p>© 2012 Debian Code Search - <a href="./contact">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
