use rel=nofollow to make search engines skip the contact page (anti-spam)

--- a/static/about.html
+++ b/static/about.html
@@ -51,7 +51,7 @@ The thesis will be available for download as soon as it is finished.
 
 <p>
 In case you have any questions which are not answered by the <a
-href="./faq">FAQ</a>, feel free to <a href="./contact">contact us</a>.
+href="./faq">FAQ</a>, feel free to <a href="./contact" rel="nofollow">contact us</a>.
 </p>
 
 <pre style="text-align: right">
@@ -62,7 +62,7 @@ href="./faq">FAQ</a>, feel free to <a href="./contact">contact us</a>.
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012 Debian Code Search - <a href="./contact">Contact / Send Feedback</a></p>
+<p>© 2012 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
