--- a/static/contact.html
+++ b/static/contact.html
@@ -39,7 +39,7 @@ Currently, the best way to reach someone is by emailing stapelberg AT debian DOT
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012 Debian Code Search - <a href="./contact">Contact / Send Feedback</a></p>
+<p>© 2012 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
