contact: mention DCS in the subject

--- a/static/contact.html
+++ b/static/contact.html
@@ -31,7 +31,9 @@
 <h1>Debian Code Search: Contact</h1>
 
 <p>
-Currently, the best way to reach someone is by emailing stapelberg AT debian DOT org
+Currently, the best way to reach someone is by emailing stapelberg AT debian
+DOT org. Please be sure to include DCS or Debian Code Search in your subject so
+that your email will not be lost in a spam filter.
 </p>
 
 </div>
