index: link to the FAQ to explain keywords

--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,9 @@
 <input type="text" name="q" autofocus="autofocus">
 <input type="submit" value="Search">
 </form>
+<p>
+<a href="/faq#keywords">See the FAQ for supported keywords</a>
+</p>
 </div>
 
 </div>
