faq: link to the source code (Thanks Bjartur)

--- a/static/faq.html
+++ b/static/faq.html
@@ -62,10 +62,8 @@ href="http://code.google.com/p/re2/wiki/Syntax">RE2:Syntax</a>.
 <h2>Q: Where is the source code of DCS?</h2>
 
 <p>
-While DCS is an open-source project, I cannot share the source code until
-January 2013 (when I hand in my thesis) because otherwise there might be
-attribution problems — that is, when you make contributions, is it really clear
-what’s my work and what’s not.
+You can find the source at <a
+href="https://github.com/debiancodesearch/dcs">github.com/debiancodesearch/dcs</a>
 </p>
 
 </div>
