update about page with link to the thesis

--- a/static/about.html
+++ b/static/about.html
@@ -45,8 +45,9 @@ implemented in <a href="http://www.golang.org/">Go</a>.
 </p>
 
 <p>
-DCS is the subject of Michael Stapelberg’s computer science bachelor thesis.
-The thesis will be available for download as soon as it is finished.
+DCS is the subject of <a
+href="http://codesearch.debian.net/research/bsc-thesis.pdf">Michael
+Stapelberg’s computer science bachelor thesis</a> (1 MiB PDF).
 </p>
 
 <p>
