static pages: update copyright notice to 2012-2013
sed -i 's,© 2012,© 2012-2013,g' static/*.html

--- a/static/faq.html
+++ b/static/faq.html
@@ -71,7 +71,7 @@ href="https://github.com/debiancodesearch/dcs">github.com/debiancodesearch/dcs</
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
+<p>© 2012-2013 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
