--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
+<p>© 2012-2013 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
