faq: clarify which distribution (sid) is indexed in DCS

--- a/static/faq.html
+++ b/static/faq.html
@@ -66,6 +66,15 @@ You can find the source at <a
 href="https://github.com/debiancodesearch/dcs">github.com/debiancodesearch/dcs</a>
 </p>
 
+<h2>Q: Which Debian distributions are indexed (e.g. testing, sid, experimental)?</h2>
+
+<p>
+Currently, DCS indexes sid only. If you have good arguments for extending or
+changing this, please let us know. Consider that including multiple versions of
+the source will lead to more search results from “the same” code.
+</p>
+
+
 </div>
 <div id="footer">
 <hr>
