add vala to the filetype: keyword (Thanks alberto)

--- a/static/faq.html
+++ b/static/faq.html
@@ -43,7 +43,7 @@ Keywords are separated from search terms by space, e.g. "<tt>printf filetype:c</
 Filters file names according to their extension.<br>
 To find source code dealing with XMPP written in Perl, you could search for "<tt>XMPP
 filetype:perl</tt>".<br>
-The currently supported languages are c, c++, perl, python, go, java, ruby, shell.
+The currently supported languages are c, c++, perl, python, go, java, ruby, shell, vala.
 </dd>
 <dt>package</dt>
 <dd>
