faq: fix typo, update code url

--- a/static/faq.html
+++ b/static/faq.html
@@ -52,7 +52,7 @@ To find all calls to <tt>xcb_create_window</tt> which the window manager i3 does
 </dd>
 <dt>path</dt>
 <dd>
-Searches only files that match the given path (usnig regular expressions).<br>
+Searches only files that match the given path (using regular expressions).<br>
 To find only matches within Debian packaging, use e.g. "<tt>systemctl path:debian/</tt>".<br>
 To find only matches within the libi3 folder of any version of i3-wm, use "<tt>i3Font path:i3-wm_.*/libi3/</tt>".
 </dl>
@@ -68,7 +68,7 @@ href="http://code.google.com/p/re2/wiki/Syntax">RE2:Syntax</a>.
 
 <p>
 You can find the source at <a
-href="https://github.com/debiancodesearch/dcs">github.com/debiancodesearch/dcs</a>
+href="https://github.com/Debian/dcs">github.com/Debian/dcs</a>
 </p>
 
 <h2>Q: Which Debian distributions are indexed (e.g. testing, sid, experimental)?</h2>
