about page: add a link to the DCS talk on YouTube

--- a/static/about.html
+++ b/static/about.html
@@ -51,6 +51,12 @@ Stapelberg’s computer science bachelor thesis</a> (1 MiB PDF).
 </p>
 
 <p>
+There also is a 50 minute talk about DCS which you can watch at <a
+href="http://www.youtube.com/watch?v=n6DtW3zCTvk">http://www.youtube.com/watch?v=n6DtW3zCTvk</a>
+(with English subtitles).
+</p>
+
+<p>
 In case you have any questions which are not answered by the <a
 href="./faq">FAQ</a>, feel free to <a href="./contact" rel="nofollow">contact us</a>.
 </p>
