Fix copyright years in 50x.html

--- a/static/50x.html
+++ b/static/50x.html
@@ -48,7 +48,7 @@ The error logs are monitored and this issue will be fixed.
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012-2013-2013 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
+<p>© 2012-2013 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
