fix back/forward button navigation

--- a/static/index.html
+++ b/static/index.html
@@ -215,7 +215,7 @@ pre {
 <input type="checkbox" id="enable-perpackage" disabled="disabled" onclick="changeGrouping()"><label for="enable-perpackage" style="opacity: 0.5">Group search results by Debian source package</label>
 </div>
 
-<div id="normalresults">
+<div id="normalresults" style="display: none">
 <h2>All results</h2>
 <div id="pagination"></div>
 <ul id="results"></ul>
