add and use SVG versions of images (retina support)

--- a/static/50x.html
+++ b/static/50x.html
@@ -10,7 +10,7 @@
 <div id="header">
    <div id="upperheader">
    <div id="logo">
-  <a href="./" title="Debian Home"><img src="./Pics/openlogo-50.png" alt="Debian" width="50" height="61"></a>
+  <a href="/" title="Debian Home"><img src="/Pics/openlogo-50.svg" alt="Debian" width="50" height="61"></a>
   </div> <!-- end logo -->
   <p class="section"><a href="/">Code Search</a></p>
  </div> <!-- end upperheader -->
@@ -48,7 +48,7 @@ The error logs are monitored and this issue will be fixed.
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<p>© 2012-2014 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
+<p>© 2012-2014 Debian Code Search - <a href="/contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
