--- a/static/index.html
+++ b/static/index.html
@@ -176,7 +176,7 @@ pre {
 <div id="header">
    <div id="upperheader">
    <div id="logo">
-  <a href="./" title="Debian Home"><img src="/Pics/openlogo-50.png" alt="Debian" width="50" height="61"></a>
+  <a href="./" title="Debian Home"><img src="/Pics/openlogo-50.svg" alt="Debian" width="50" height="61"></a>
   </div> <!-- end logo -->
   <p class="section"><a href="/">Code Search</a></p>
   <div id="searchbox">
@@ -246,8 +246,8 @@ pre {
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<a href="http://www.rackspace.com/"><img src="./Pics/rackspace.png" alt="Powered by Rackspace Hosting" width="200" height="59" border="0" style="float: right"></a>
-<p>© 2012-2014 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
+<a href="http://www.rackspace.com/"><img src="/Pics/rackspace.svg" alt="Powered by Rackspace Hosting" width="200" height="59" border="0" style="float: right"></a>
+<p>© 2012-2014 Debian Code Search - <a href="/contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
