indicate progress when loading a results page and the connection is taking long

--- a/static/index.html
+++ b/static/index.html
@@ -95,13 +95,13 @@ pre {
     overflow: hidden;
 }
 
-#packages span:last-child {
+#packages span.showhint {
 /* TODO: instead of specifying a percentage, can we make this auto-size? use http://jsfiddle.net/L8S9L/2/ for testing */
     width: 5%;
     padding-left: 0.5em;
 }
 
-#packages span:last-child a {
+#packages span.showhint a {
    text-decoration: none;
 }
 
