add an opensearch description document (for tab to search)
see http://www.chromium.org/tab-to-search

--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
 }
 </style>
 <link rel="stylesheet" href="/debcodesearch.min.css">
+<link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml">
 </head>
 <body>
 
