add the debian favicon

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
 </style>
 <link rel="stylesheet" href="/debcodesearch.min.css">
 <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml">
+<link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
 
