--- a/static/index.html
+++ b/static/index.html
@@ -100,7 +100,7 @@
 <hr>
 <!--UdmComment-->
 <div id="fineprint">
-<a href="http://www.rackspace.com/"><img src="/Pics/rackspace.svg" alt="Powered by Rackspace Hosting" width="200" height="59" border="0" style="float: right"></a>
+<a href="http://developer.rackspace.com/"><img src="/Pics/rackspace.svg" alt="Powered by Rackspace Hosting" width="200" height="59" border="0" style="float: right"></a>
 <p>© 2012-2014 Debian Code Search - <a href="/contact" rel="nofollow">Contact / Send Feedback</a></p>
 </div>
 <!--/UdmComment-->
