implement the -filetype: keyword, case-insensitively match extensions
closes #9

--- a/static/faq.html
+++ b/static/faq.html
@@ -37,6 +37,10 @@ Each keyword must be specified as "type:value", without additional spaces.<br>
 Keywords are separated from search terms by space, e.g. "<tt>printf filetype:c</tt>".
 </p>
 
+<p>
+All keywords can be negated, e.g. “<tt>xcb_create_window -filetype:c</tt>”.
+</p>
+
 <dl>
 <dt>filetype</dt>
 <dd>
