--- a/static/index.html
+++ b/static/index.html
@@ -107,6 +107,6 @@
 </div> <!-- end footer -->
 <script type="text/javascript" src="/jquery.min.js"></script>
 <script type="text/javascript" src="/reconnecting-websocket.min.js"></script>
-<script type="text/javascript" src="/instant.min.js"></script>
+<script type="text/javascript" src="/instant.min.js?2"></script>
 </body>
 </html>
