javascript client: add additional pagination on the bottom

--- a/static/index.html
+++ b/static/index.html
@@ -71,14 +71,16 @@
 
 <div id="normalresults" style="display: none">
 <h2>All results</h2>
-<div id="pagination"></div>
+<div class="pagination"></div>
 <ul id="results"></ul>
+<div class="pagination"></div>
 </div>
 
 <div id="perpackage" class="ppanimation" style="display: none">
 <h2>Results by package</h2>
-<div id="perpackage-pagination"></div>
+<div class="perpackage-pagination"></div>
 <div id="perpackage-results"></div>
+<div class="perpackage-pagination"></div>
 </div>
 
 <div id="searchdiv">
