faq: update RE2 link

--- a/static/faq.html
+++ b/static/faq.html
@@ -65,7 +65,7 @@ To find only matches within the libi3 folder of any version of i3-wm, use "<tt>i
 
 <p>
 Why yes! The full syntax is described at <a
-href="http://code.google.com/p/re2/wiki/Syntax">RE2:Syntax</a>.
+href="https://github.com/google/re2/blob/master/doc/syntax.txt">RE2:Syntax</a>.
 </p>
 
 <h2>Q: Where is the source code of DCS?</h2>
