faq: document how long it takes until a new package is indexed

--- a/static/faq.html
+++ b/static/faq.html
@@ -83,6 +83,16 @@ changing this, please let us know. Consider that including multiple versions of
 the source will lead to more search results from “the same” code.
 </p>
 
+<h2>Q: How long does it take until new code is indexed?</h2>
+
+<p>
+Once a source package is uploaded to ftp-master, we fetch it and start the
+indexing process typically within a couple of minutes (in the worst case, it
+will take up to an hour until we see the package). Then, it typically takes
+another couple of minutes until the index was rebuilt and is live. All in all,
+expect to see new source code being searchable about an hour or two after it
+was uploaded.
+</p>
 
 </div>
 <div id="footer">
