css: remove useless @import, use .min.css everywhere
debian.css is already minified into debcodesearch.min.css, so the
@import resulted in loading that content twice.

Using debcodesearch.min.css everywhere shaves off 0.10s of the total
loading time (1.56s to 1.47s) and saves 1 request.

--- a/static/50x.html
+++ b/static/50x.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Debian Code Search</title>
-<link rel="stylesheet" href="debcodesearch.css">
+<link rel="stylesheet" href="debcodesearch.min.css">
 </head>
 <body>
 
