--- a/static/contact.html
+++ b/static/contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Debian Code Search</title>
-<link rel="stylesheet" href="debcodesearch.css">
+<link rel="stylesheet" href="debcodesearch.min.css">
 </head>
 <body>
 
