index: include woff2 sources, use 'Roboto' alias
Without using the 'Roboto' alias, the font will not be found even if
it’s present on the operating system.

--- a/static/index.html
+++ b/static/index.html
@@ -6,19 +6,19 @@
 <style type="text/css">
 @font-face {
   font-family: 'Inconsolata';
-  src: local('Inconsolata'), url(/Inconsolata.woff) format('woff');
+  src: local('Inconsolata'), url(/Inconsolata.woff2) format('woff2'), url(/Inconsolata.woff) format('woff');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto Regular'), local('Roboto-Regular'), url(/Roboto-Regular.woff) format('woff');
+  src: local('Roboto'), local('Roboto Regular'), local('Roboto-Regular'), url(/Roboto-Regular.woff2) format('woff2'), url(/Roboto-Regular.woff) format('woff');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto Bold'), local('Roboto-Bold'), url(/Roboto-Bold.woff) format('woff');
+  src: local('Roboto Bold'), local('Roboto-Bold'), url(/Roboto-Bold.woff2) format('woff2'), url(/Roboto-Bold.woff) format('woff');
 }
 </style>
 <script type="text/javascript">
