--- a/static/faq.html
+++ b/static/faq.html
@@ -47,7 +47,7 @@ All keywords can be negated, e.g. “<tt>xcb_create_window -filetype:c</tt>”.
 Filters file names according to their extension.<br>
 To find source code dealing with XMPP written in Perl, you could search for "<tt>XMPP
 filetype:perl</tt>".<br>
-The currently supported file types are c, objective-c, c++, perl, python, go, java, ruby, shell, vala, javascript, json.
+The currently supported file types are c, objective-c, objective-c++, c++, perl, python, go, java, ruby, shell, vala, javascript, json.
 </dd>
 <dt><tt>package</tt> (or <tt>pkg</tt>)</dt>
 <dd>
