faq: mention switching search mode to regex (Thanks Jonas)

--- a/static/faq.html
+++ b/static/faq.html
@@ -64,8 +64,9 @@ To find only matches within the libi3 folder of any version of i3-wm, use "<tt>i
 <a id="regexp"><h2>Q: Can I use regular expressions?</h2></a>
 
 <p>
-Why yes! The full syntax is described at <a
-href="https://github.com/google/re2/blob/master/doc/syntax.txt">RE2:Syntax</a>.
+Why yes! The full syntax is described
+at <a href="https://github.com/google/re2/blob/master/doc/syntax.txt">RE2:Syntax</a>. Be
+sure to switch the search mode from “literal” to “regex”.
 </p>
 
 <h2>Q: Where is the source code of DCS?</h2>
