about: mention blog posts, too

--- a/static/about.html
+++ b/static/about.html
@@ -57,6 +57,13 @@ href="http://www.youtube.com/watch?v=n6DtW3zCTvk">http://www.youtube.com/watch?v
 </p>
 
 <p>
+If you want to read more about Debian Code Search, check out the Debian Code
+Search posts
+in <a href="https://michael.stapelberg.ch/posts/tags/debian/">Michael
+Stapelberg’s blog</a>.
+</p>
+
+<p>
 In case you have any questions which are not answered by the <a
 href="./faq">FAQ</a>, feel free to <a href="./contact" rel="nofollow">contact us</a>.
 </p>
