fix youtube link
looks like the GPN account vanished

--- a/static/about.html
+++ b/static/about.html
@@ -52,7 +52,7 @@ Stapelberg’s computer science bachelor thesis</a> (1 MiB PDF).
 
 <p>
 There also is a 50 minute talk about DCS which you can watch at <a
-href="http://www.youtube.com/watch?v=n6DtW3zCTvk">http://www.youtube.com/watch?v=n6DtW3zCTvk</a>
+href="https://youtu.be/4B1Kcw0LrJ0">https://youtu.be/4B1Kcw0LrJ0</a>
 (with English subtitles).
 </p>
 
