Add new page thirdparty.html
for listing third party projects
using Debian Code Search service.

Link it from a related faq question
and the about page.

Issue #105

--- a/static/about.html
+++ b/static/about.html
@@ -64,6 +64,11 @@ Stapelberg’s blog</a>.
 </p>
 
 <p>
+You can also check how other projects are using Debian Code Search, we
+list them on <a href="./thirdparty">third party projects</a>.
+</p>
+
+<p>
 In case you have any questions which are not answered by the <a
 href="./faq">FAQ</a>, feel free to <a href="./contact" rel="nofollow">contact us</a>.
 </p>
