--- a/static/faq.html
+++ b/static/faq.html
@@ -95,6 +95,14 @@ expect to see new source code being searchable about an hour or two after it
 was uploaded.
 </p>
 
+<h2>I want to use the code search service in my own project, is there an official API?</h2>
+
+<p>
+For the time being, there is no API, but this hasn’t stopped people from using the websocket
+interface directly, though, see codesearch-cli tool in <a href="./thirdparty">third party
+projects</a>. Also consider subscribing to <a href="https://github.com/Debian/dcs/issues/89">
+this issue</a> if you're interested on that.
+</p>
 </div>
 <div id="footer">
 <hr>
