faq: reference now-existing API

--- a/static/faq.html
+++ b/static/faq.html
@@ -98,10 +98,11 @@ was uploaded.
 <h2>I want to use the code search service in my own project, is there an official API?</h2>
 
 <p>
-For the time being, there is no API, but this hasn’t stopped people from using the websocket
-interface directly, though, see codesearch-cli tool in <a href="./thirdparty">third party
-projects</a>. Also consider subscribing to <a href="https://github.com/Debian/dcs/issues/89">
-this issue</a> if you're interested on that.
+  Yes! See <a href="https://codesearch.debian.net/apikeys/">Debian Code Search API keys</a>.
+</p>
+
+<p>
+  We have a list of <a href="./thirdparty">third party projects</a>, which use Debian Code Search.
 </p>
 </div>
 <div id="footer">
