faq: the package keyword supports regular expressions, like path
fixes https://github.com/Debian/dcs/issues/124

--- a/static/faq.html
+++ b/static/faq.html
@@ -51,7 +51,7 @@ The currently supported file types are c, c++, objc, objc++, perl, python, go, j
 </dd>
 <dt><tt>package</tt> (or <tt>pkg</tt>)</dt>
 <dd>
-Searches only within the specified Debian source package.<br>
+Searches only within the specified Debian source packages (using regular expressions).<br>
 To find all calls to <tt>xcb_create_window</tt> which the window manager i3 does, you could search for "<tt>xcb_create_window package:i3-wm</tt>".<br>
 </dd>
 <dt><tt>path</tt></dt>
